tests/src/frontend/syntax/invalid/static_mutable_method.sk
class C() {
  static mutable fun m(): String { "Fail" }
}

fun main(): String {
  C::m()
}
